--- a/Winter/src/log4j.properties
+++ b/Winter/src/log4j.properties
@@ -7,6 +7,7 @@ log4j.category.jp.co.intage.k2plus1.common.aop = DEBUG, C
 log4j.additivity.org.seasar=false
 log4j.additivity.jp.co.intage.framework.aop=false
 log4j.additivity.jp.co.intage.k2plus1.common.aop=false
+log4j.additivity.com.app.aop =false
 
 # Console
 log4j.appender.C=org.apache.log4j.ConsoleAppender
